tests/files/flow_controller_tests/should_run/080.cmdr
x = 5.5;
print sinh(x);