tests/files/flow_controller_tests/should_fail/049.cmdr
x = true;
print tan(x);